# informatyka-projekt

./: LICENSE
inf cw 4.0/: CMakeLists.txt
inf cw 4.0/src/: Game.cpp  Game.h  GameState.cpp  GameState.h  Menu.cpp  Menu.h  Paletka.cpp  Paletka.h  Pilka.cpp  Pilka.h  Stone.cpp  Stone.h
